# 2026-gatech

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  setupTutorialEnv.sh  style.css
sessions/04_muon_col/tutorial/: 00_transformer_pretraining.ipynb  01_bdt_baseline.ipynb  02_simple_transformer_tutorial.ipynb  02_simple_transformer_tutorial_solutions.ipynb  02_simple_transformer_tutorial_updated.ipynb  02_simple_transformer_tutorial_v2.ipynb  02_simple_transformer_tutorial_v2_solutions.ipynb  03_advanced_context_auxiliary_training.ipynb  dataloader.py  pyproject.toml  setupTutorialEnv.sh  tutorial_utils.py
sessions/04_muon_col/tutorial/.ipynb_checkpoints/: 01_bdt_baseline-checkpoint.ipynb  02_simple_transformer_tutorial_solutions-checkpoint.ipynb  02_simple_transformer_tutorial_updated-checkpoint.ipynb  02_simple_transformer_tutorial_v2-checkpoint.ipynb  02_simple_transformer_tutorial_v2_solutions-checkpoint.ipynb
sessions/04_muon_col/tutorial/advanced/: 00_transformer_pretraining.ipynb  01_bdt_baseline.ipynb  03_advanced_context_auxiliary_training.ipynb
sessions/04_muon_col/tutorial/bdt_baseline_outputs/: bdt_feature_importance.csv  bdt_gradient_boosting.joblib  bdt_leaderboard_row.csv
sessions/04_muon_col/tutorial/simple_transformer_solution_outputs/: capacity_transformer_reference.pt  context_broadcast_transformer_reference.pt  context_head_transformer_reference.pt  depth_transformer_reference.pt  dropout_transformer_reference.pt  pooling_transformer_reference.pt  preprocess_transformer_reference.pt  simple_pixel_transformer_reference.pt
(+119 files in other folders)
