[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mucoll_helpers"
version = "0.1.0"
description = "ML4FPS Muon Collider tutorial utilities and models"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scikit-learn",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mucoll_helpers*"]